--- a/src/App.css
+++ b/src/App.css
@@ -19,14 +19,149 @@ header {
   height: 100px;
   border-bottom: 2px solid rgba(255, 255, 255, 0.2);
 }
-header img{
+header .logo {
   position: absolute;
-}
-header .logo{
   left: 0;
 }
-header .cart{
+.cart-box{
+  position: absolute;
   right: 0;
+  overflow: visible;
+}
+.cart-box .cart {
+  cursor: pointer;
+}
+.cart-box .cart-count{
+  position: absolute;
+  bottom: -5px;
+  right: -10px;
+  width: 20px;
+  height: 20px;
+  background-color: #d87d4a;
+  color: #fff;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+}
+.cart-dropdow-box{
+  position: absolute;
+  width: 377px;
+  min-height: 400px;
+  border-radius: 8px;
+  padding: 32px;
+  background-color: #fff;
+  color: #000;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  top: 100px;
+  right: 5px;
+  transform: translateY(-100px);
+  z-index: -1;
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 0.2s ease, transform 0.35s ease, z-index 0.5s ease;
+}
+.cart-dropdow-box.active{
+  z-index: 999;
+  transform: translateY(0);
+  pointer-events: auto;
+  opacity: 1;
+}
+.cart-text-box{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.cart-text-box h1{
+  font-size: 18px;
+  font-weight: 700;
+}
+.cart-text-box span{
+  font-size: 15px;
+  opacity: 0.5;
+  text-decoration: underline;
+  cursor: pointer;
+}
+.cart-text-box span:hover{
+  opacity: 1;
+  color: #d87d4a;
+}
+.cart-text-box p{
+  font-size: 15px;
+  opacity: 0.5;
+}
+.empty-cart{
+  width: 100%;
+  height: 140px;
+  opacity: 0.5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cart-item-box{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  min-height: 140px;
+}
+.cart-item{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.cart-item img{
+  width: 64px;
+  height: 64px;
+  border-radius: 8px;
+}
+.cart-item-text-box{
+  width: 100%;
+}
+.cart-item-text-box h1{
+  margin-bottom: 7px;
+  font-size: 15px;
+  font-weight: 700;
+}
+.cart-item-text-box p{
+  font-size: 14px;
+  opacity: 0.5;
+  font-weight: 700;
+}
+.cart-item .increase-count{
+  position: relative;
+  width: 300px;
+  height: 40px;
+  padding: 0;
+  justify-content: space-around;
+}
+.cart-item .increase-count span{
+  position: absolute;
+}
+.cart-item .increase-count span:nth-child(1){
+  left: 20px;
+}
+.cart-item .increase-count span:nth-child(3){
+  right: 20px;
+}
+.cart-item .increase-count h1{
+  width: 20px;
+  text-align: center;
+}
+.cart-dropdow-box .see-product{
+  cursor: pointer;
+  width: 100%;
+  background-color: #d87d4a;
+  color: #fff;
+  text-align: center;
+}
+.cart-dropdow-box .see-product:hover{
+  background-color: #fbaf85;
 }
 header ul {
   display: flex;
@@ -59,7 +194,7 @@ header ul {
   font-size: 15px;
   opacity: 0.75;
 }
-.see-product{
+.see-product {
   padding: 14px 20px;
   width: 160px;
   font-weight: 700;
@@ -67,21 +202,24 @@ header ul {
 .main-text-box .see-product {
   margin-top: 16px;
   color: white;
-  background-color: #D87D4A;
+  background-color: #d87d4a;
 }
-section{
+.main-text-box .see-product:hover {
+  background-color: #fbaf85;
+}
+section {
   padding: 100px 10%;
   gap: 168px;
   display: flex;
   flex-direction: column;
 }
-.card-box{
+.card-box {
   width: 100%;
   height: 320px;
   display: flex;
   gap: 30px;
 }
-.card{
+.card {
   position: relative;
   width: 100%;
   height: 100%;
@@ -92,16 +230,16 @@ section{
   justify-content: end;
   padding-bottom: 40px;
 }
-.card-bg{
+.card-bg {
   position: absolute;
   z-index: -1;
   bottom: 0;
-  background-color: #F1F1F1;
+  background-color: #f1f1f1;
   height: 230px;
   width: 100%;
   border-radius: 8px;
 }
-.card-img-box{
+.card-img-box {
   top: 0;
   position: absolute;
   width: 100%;
@@ -109,62 +247,68 @@ section{
   justify-content: center;
   align-items: center;
 }
-.card-img{
+.card-img {
   width: 250px;
 }
-.card h1{
+.card h1 {
   font-size: 20px;
   letter-spacing: 3px;
 }
-.card a{
+.card a {
   display: flex;
   align-items: center;
   gap: 10px;
 }
-.card a img{
+.card a img {
   width: 10px;
   height: 15px;
 }
-.card h2{
+.card h2 {
   font-size: 13px;
   opacity: 0.5;
 }
-.products{
+.products {
   display: flex;
   flex-direction: column;
   gap: 50px;
 }
-.Zx9-speaker{
+.Zx9-speaker {
   position: relative;
   width: 100%;
   height: 560px;
   border-radius: 8px;
-  background-color: #D87D4A;
+  background-color: #d87d4a;
   display: flex;
   align-items: center;
   justify-content: end;
   overflow: hidden;
 }
-.Zx9-speaker .speaker-img{
+.Zx9-speaker .see-product {
+  background-color: #000;
+}
+.Zx9-speaker .see-product:hover {
+  background-color: #4c4c4c;
+}
+.Zx9-speaker .speaker-img {
   position: absolute;
   width: 410px;
   height: 500px;
   bottom: -11px;
   left: 190px;
 }
-.Zx9-speaker .circle{
+.Zx9-speaker .circle {
   width: 944px;
   height: 944px;
   position: absolute;
   bottom: -340px;
   left: -75px;
 }
-.Zx9-speaker div{
+.Zx9-speaker div {
   position: relative;
   margin-right: 150px;
   z-index: 2;
 }
-.Zx7-speaker{
+.Zx7-speaker {
   width: 100%;
   height: 320px;
   border-radius: 8px;
@@ -175,21 +319,25 @@ section{
   background-image: url("/assets/home/desktop/image-speaker-zx7.jpg");
   padding-left: 95px;
 }
-.Zx7-speaker h1{
+.Zx7-speaker h1 {
   font-size: 30px;
 }
-.Zx7-speaker .see-product{
+.Zx7-speaker .see-product {
   background: transparent;
   border: 1px solid #000;
   color: #000;
 }
-.Yx1-earphones{
+.Zx7-speaker .see-product:hover {
+  background-color: #000;
+  color: #fff;
+}
+.Yx1-earphones {
   width: 100%;
   height: 320px;
   display: flex;
   gap: 30px;
 }
-.Yx1-earphones .img-box{
+.Yx1-earphones .img-box {
   width: 100%;
   height: 100%;
   border-radius: 8px;
@@ -198,7 +346,7 @@ section{
   background-position: center;
   background-repeat: no-repeat;
 }
-.Yx1-earphones .text-box{
+.Yx1-earphones .text-box {
   width: 100%;
   height: 100%;
   border-radius: 8px;
@@ -206,47 +354,51 @@ section{
   flex-direction: column;
   justify-content: center;
   gap: 30px;
-  background-color: #F1F1F1;
+  background-color: #f1f1f1;
 }
-.Yx1-earphones .text-box h1{
+.Yx1-earphones .text-box h1 {
   font-size: 30px;
   margin-left: 95px;
 }
-.Yx1-earphones .text-box .see-product{
+.Yx1-earphones .text-box .see-product {
   margin-left: 95px;
   background: transparent;
   border: 1px solid #000;
 }
-.info-box{
+.Yx1-earphones .text-box .see-product:hover {
+  color: #fff;
+  background: #000;
+}
+.info-box {
   width: 100%;
   height: 588px;
   display: flex;
   align-items: center;
 }
-.info-text{
+.info-text {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 32px;
 }
-.info-text h1{
+.info-text h1 {
   font-size: 40px;
   line-height: 44px;
 }
-.info-text span{
-  color: #D87D4A;
+.info-text span {
+  color: #d87d4a;
 }
-.info-text p{
+.info-text p {
   font-size: 15px;
   opacity: 0.5;
 }
-.info-img{
+.info-img {
   width: 100%;
   height: 100%;
   border-radius: 8px;
   background-image: url("/assets/shared/desktop/image-best-gear.jpg");
 }
-footer{
+footer {
   position: relative;
   width: 100%;
   height: 365px;
@@ -257,44 +409,44 @@ footer{
   gap: 36px;
   padding: 0 10%;
 }
-footer .line{
+footer .line {
   position: absolute;
   width: 101px;
   height: 4px;
-  background-color: #D87D4A;
+  background-color: #d87d4a;
 }
-footer .links{
+footer .links {
   margin-top: 40px;
   display: flex;
   justify-content: space-between;
 }
-footer .links ul{
+footer .links ul {
   display: flex;
   gap: 34px;
   list-style-type: none;
   font-weight: 700;
 }
-footer .text{
+footer .text {
   font-size: 15px;
   opacity: 0.5;
 }
-footer .footer-end{
+footer .footer-end {
   margin-top: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-footer .footer-end .social-media{
+footer .footer-end .social-media {
   display: flex;
   gap: 10px;
   align-self: end;
   bottom: 70px;
 }
-footer .footer-end p{
+footer .footer-end p {
   font-size: 15px;
   opacity: 0.5;
 }
-.categorys-header-box{
+.categorys-header-box {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -304,49 +456,197 @@ footer .footer-end p{
   background-color: #000;
   color: #fff;
 }
-.categorys-header-box .content-wrapper{
+.categorys-header-box .content-wrapper {
   justify-content: center;
 }
-.items-box{
+.items-box {
   display: flex;
   flex-direction: column;
   gap: 160px;
 }
-.item{
+.item {
   width: 100%;
   height: 560px;
   display: flex;
   align-items: center;
 }
-.item-reverse{
+.item-reverse {
   flex-direction: row-reverse;
 }
-.item img{
+.item img {
   width: 540px;
   height: 560px;
   border-radius: 8px;
 }
-.item .container{
+.item .container {
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.item-reverse .container{
+.item-reverse .container {
   justify-content: start;
 }
-.item .main-text-box{
+.item .main-text-box {
   width: 445px;
 }
-.item .main-text-box h2{
+.item .main-text-box h2 {
   opacity: 1;
   letter-spacing: 10px;
-  color: #D87D4A;
+  color: #d87d4a;
 }
-.item .main-text-box h1{
+.item .main-text-box h1 {
   color: #000;
 }
-.item .main-text-box p{
+.item .main-text-box p {
   color: #000;
+}
+.item-header-box {
+  width: 100%;
+  padding: 0 10%;
+  background-color: #000;
+}
+.item-container {
+  width: 100%;
+}
+.item-container h3 {
+  margin-bottom: 50px;
+  font-size: 15px;
+  opacity: 0.5;
+  cursor: pointer;
+  display: inline-block;
+}
+.container .main-text-box h3 {
+  color: #000;
+  opacity: 1;
+  font-weight: 700;
+  font-size: 18px;
+  cursor: default;
+}
+.btn-box {
+  color: #000;
+  display: flex;
+  gap: 16px;
+}
+.btn-box .see-product {
+  margin: 0;
+}
+.increase-count {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  padding: 0 20px;
+  background-color: #f1f1f1;
+  width: 120px;
+  justify-content: space-between;
+}
+.increase-count h1 {
+  font-size: 13px;
+}
+.increase-count span {
+  font-weight: 700;
+  opacity: 0.5;
+  user-select: none;
+  cursor: pointer;
+}
+.increase-count span:hover {
+  opacity: 1;
+  color: #d87d4a;
+}
+.additional-info {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+}
+.features {
+  width: 55%;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.additional-info p {
+  font-size: 15px;
+  opacity: 0.5;
+  display: inline-block;
+}
+.additional-info h1 {
+  font-size: 32px;
+}
+.in-the-box {
+  width: 45%;
+  display: flex;
+  justify-content: center;
+}
+.in-the-box ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.in-the-box ul h1 {
+  margin-bottom: 20px;
+}
+.in-the-box ul span {
+  color: #d87d4a;
+  margin-right: 24px;
+  font-weight: 700;
+}
+.item-img-box {
+  display: flex;
+  height: 650px;
+  gap: 30px;
+}
+.item-img-box img {
+  width: 60%;
+  height: 100%;
+  border-radius: 8px;
+}
+.item-img-box div {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.item-img-box div img {
+  width: 100%;
+  height: 100%;
+}
+.also-like {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 64px;
+}
+.also-like h1 {
+  font-size: 32px;
+}
+.recommendations {
+  width: 100%;
+  display: flex;
+  gap: 30px;
+}
+.recommendation-box {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+}
+.recommendation-box h1 {
+  font-size: 24px;
+}
+.recommendation-box img {
+  width: 100%;
+  border-radius: 8px;
+}
+.recommendation-box .see-product {
+  background-color: #d87d4a;
+  color: #fff;
+}
+.recommendation-box .see-product:hover {
+  background-color: #fbaf85;
 }
