--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   font-family: "Manrope", sans-serif;
   user-select: none;
-  transition:color 0.5s ease, background 0.5s ease, opacity 0.5s ease, transform 0.5s ease, z-index 0.5s ease;
+  transition:color 0.5s ease, background 0.5s ease, opacity 0.5s ease, transform 0.5s ease, z-index 0.5s ease, border 0.5s ease;
 }
 
 main{
