--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ header {
   justify-content: center;
   height: 100px;
   border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+  z-index: 6;
 }
 header .logo {
   position: absolute;
@@ -830,7 +831,7 @@ form {
 }
 .cart-item .cart-item-quantity {
   position: absolute;
-  top: 0;
+  top: 7px;
   right: 0;
 }
 .cart-item .cart-item-quantity h1 {
@@ -846,5 +847,128 @@ form {
   text-align: center;
 }
 .summary .see-product:hover {
+  background-color: #fbaf85;
+}
+.summary-popUp{
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.summary-popUp .bg{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background-color: #000;
+  opacity: 0.2;
+  z-index: -10;
+}
+.popUp-container{
+  width: 540px;
+  padding: 48px;
+  display: flex;
+  flex-direction: column;
+  gap: 33px;
+  border-radius: 8px;
+  background-color: #fff;
+  z-index: 999;
+  scale: 0.85;
+}
+.popUp-container .popUp-thx{
+  font-size: 32px;
+  line-height: 36px;
+}
+.popUp-container h5{
+  font-size: 15px;
+  opacity: 0.5;
+  font-weight: 400;
+}
+.popUp-icon{
+  width: 64px;
+  height: 64px;
+}
+.popUp-summery-box{
+  width: 100%;
+  display: flex;
+}
+.wrapper{
+  background-color: #F1F1F1;
+  border-radius: 8px 0 0 8px;
+  padding: 24px 5px 24px 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 70%;
+}
+.wrapper .cart-item-box {
+  padding-right: 19px;
+  position: relative;
+}
+.wrapper .cart-item-box::-webkit-scrollbar {
+  width: 5px;
+}
+.wrapper .cart-item-box::-webkit-scrollbar-track {
+  background: transparent;
+}
+.wrapper .cart-item-box::-webkit-scrollbar-thumb {
+  background-color: #000;
+  border-radius: 10px;
+}
+.wrapper .cart-item img{
+  width: 50px;
+  height: 50px;
+}
+.wrapper h2{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: 999;
+  width: calc(100% - 19px);
+  font-size: 15px;
+  cursor: pointer;
+  color: rgba(0, 0, 0, 0.5);
+  border-top: 2px solid rgba(0, 0, 0, 0.5);
+  padding: 12px 0 0 0;
+}
+.wrapper h2:hover{
+  color: #d87d4a;
+  border-color: #d87d4a;
+}
+.wrapper h2 span:nth-child(2){
+  position: absolute;
+  align-self: center;
+}
+.grandTotal-box{
+  background-color: #000;
+  border-radius: 0 8px 8px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 32px;
+  gap: 5px;
+  color: #fff;
+}
+.grandTotal-box span{
+  font-size: 15px;
+  font-weight: 400;
+  opacity: 0.5;
+}
+.grandTotal-box h3{
+  font-size: 18px;
+}
+.popUp-container .see-product{
+  width: 100%;
+  background-color: #d87d4a;
+  color: #fff;
+  text-align: center;
+  cursor: pointer;
+}
+.popUp-container .see-product:hover{
   background-color: #fbaf85;
 }
