--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,11 @@
   box-sizing: border-box;
   font-family: "Manrope", sans-serif;
   user-select: none;
-  transition:color 0.5s ease, background 0.5s ease, opacity 0.5s ease, transform 0.5s ease, z-index 0.5s ease, border 0.5s ease;
+  transition: color 0.5s ease, background 0.5s ease, opacity 0.5s ease,
+    transform 0.5s ease, z-index 0.5s ease, border 0.5s ease, height 0.5s ease;
 }
 
-main{
+main {
   overflow-x: hidden;
 }
 
@@ -30,11 +31,11 @@ a {
   color: inherit;
 }
 
-a:hover{
+a:hover {
   color: #d87d4a;
   opacity: 1 !important;
 }
 
-a:hover h2{
+a:hover h2 {
   opacity: 1;
 }
